test_suite/alan-2022-examples/failing/005140_mutation.alan
source n begin leave y4Sia function Pi() begin relax end * A1Z2 end
